# internal/http/response/auth.go
@@ -5,3 +5,7 @@ type SignInResponse struct {
 	RefreshToken string       `json:"refresh_token"`
 	User         UserResponse `json:"user"`
 }
+
+type RefreshTokenResponse struct {
+	AccessToken string `json:"access_token"`
+}
